Fix footer spacing

--- a/ui-library/scss/main.scss
+++ b/ui-library/scss/main.scss
@@ -125,5 +125,11 @@ section {
 footer {
   background: $midgray1;
   width: 100%;
+
+  div.publication-info {
+    p:first-of-type {
+      margin-top: 0;
+    }
+  }
 }
 
